# api-playground

./: .gitignore  README.md
.github/workflows/: lint.yml
FastAPI_version/day1-ip-api/: .dockerignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
FastAPI_version/day1-ip-api/fastapi_version/: main.py
FastAPI_version/day1-ip-api/src/: main.py
FastAPI_version/day1-ip-api/tests/: test_main.py
Flask_version/day1-ip-api/: Dockerfile  requirements.txt
Flask_version/day1-ip-api/src/: main.py
Flask_version/day1-ip-api/tests/: test_main.py
day1-ip-api/: .dockerignore  Dockerfile  main.py
day1-ip-api/src/: main.py
day1-ip-api/tests/: test_main.py
scripts/: docker_build.sh
